implement settings store
- configuration still doesn't affect actual behaviors as it needs to be
  plumbed to content scripts
- there is a bug status icon always shows an error this was mistakenly
  added on removing unexpected errors on chrome:// URLs

--- a/v3/popup.html
+++ b/v3/popup.html
@@ -52,6 +52,6 @@ Inject at most one speculationrules automatically
 for a same-origin link that appears in an anchor tag in the page first.
 </div>
 </fieldset>
-<script src="popup.js"></script>
+<script type="module" src="popup.js"></script>
 </body>
 </html>
