--- a/v3/popup.html
+++ b/v3/popup.html
@@ -51,6 +51,10 @@ fieldset {
 <div class="group">
 <input type="checkbox" id="autoInjection">
 <label for="autoInjection">Enable</label>
+(
+<input type="number" id="maxRulesByAnchors" min="1" max="10" style="width: 32pt;">
+<label for="maxRulesByAnchors"> prerender(s) at maximum</label>
+)
 </div>
 <div>
 Inject at most one speculationrules automatically
