Fix popup page typo

--- a/v3/popup.html
+++ b/v3/popup.html
@@ -41,7 +41,7 @@ button {
 <body width="100%">
 <div class="title">Prerender Tweaks</div>
 <div>
-<p>This Chrome Extension allows you to trigger prerenderingeven even if the site doesn't support it.</p>
+<p>This Chrome Extension allows you to trigger prerendering even if the site doesn't support it.</p>
 <p>'Prerender this link' menu item will also appear in a popup context menu if the anchor tag points a same-origin page.
 </div>
 
