--- a/v3/popup.html
+++ b/v3/popup.html
@@ -79,6 +79,15 @@ Inject speculationrules when mouse moves over an anchor tag that points to a sam
 </fieldset>
 
 <fieldset>
+<legend>Prerender the last visit page</legend>
+<input type="checkbox" id="lastVisitInjection">
+<label for="lastVisitInjection">Enable</label>
+<div>
+Inject speculationrules for the page to which you navigated from the current page at last visit.
+</div>
+</fieldset>
+
+<fieldset>
 <legend>Statistics</legend>
 <input type="checkbox" id="recordMetrics">
 <label for="recordMetrics">Enable</label>
