Introduce per-origin block setting
Now users can disable the speculationrules injection from the popup
page. This also requires some architectural changes that stops
automated operations in content_script, but delegates the background
main script to control all sequence to detect, monitor, and check
the current status.

--- a/v3/popup.html
+++ b/v3/popup.html
@@ -58,6 +58,13 @@ button {
 <div class="section">Settings</div>
 
 <fieldset>
+<legend>Domain Specific Settings (<span name="domain"></span>)</legend>
+<div class="group">
+<input type="checkbox" id="enable">
+<label for="enable">Enable at <span name="domain"></span></label>
+</fieldset>
+
+<fieldset>
 <legend>Auto Injection</legend>
 <div class="group">
 <input type="checkbox" id="autoInjection">
