--- a/v3/popup.html
+++ b/v3/popup.html
@@ -102,7 +102,7 @@ Inject speculationrules when mouse moves over an anchor tag that points to a sam
 <input type="checkbox" id="crossOriginSameSiteSupport">
 <label for="crossOriginSameSiteSupport">Enable</label>
 <div>
-Inject <code>Support-Loading-Mode: credentialed-prerender</code>
+Inject <code>Supports-Loading-Mode: credentialed-prerender</code>
 to permit cross-origin same-site prerendering.
 </div>
 </fieldset>
